// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render logged-out type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-success
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Du är utloggad
      </h1>
      <p
        class="ids-preamble"
      >
        Du har antingen valt att logga ut eller blivit utloggad på grund av inaktivitet. Du kan nu stänga fliken eller logga in på nytt.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="/"
            >
              Till inloggning
            </a>
          </ids-link>
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://www.1177.se"
            >
              Till 1177
            </a>
            <ids-icon-external
              class="ids-icon"
              slot="append-icon"
            />
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render login-failed type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Inloggning misslyckades
      </h1>
      <p
        class="ids-preamble"
      >
        På grund av ett tekniskt fel går det inte att logga in just nu. Försök igen senare.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://e-tjanster.1177.se/mvk/"
            >
              Till startsidan
            </a>
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render not-found type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Sidan hittades inte
      </h1>
      <p
        class="ids-preamble"
      >
        Sidan du söker har fått en ny adress eller är borttagen.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://e-tjanster.1177.se/mvk/"
            >
              Till startsidan
            </a>
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render unavailable type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Tjänsten är inte tillgänglig just nu
      </h1>
      <p
        class="ids-preamble"
      >
        Välkommen tillbaka vid senare tillfälle.
      </p>
    </div>
  </div>
</div>
`;

exports[`Should render underage type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Du som är under 16 har inte tillgång till 1177 intyg
      </h1>
      <p
        class="ids-preamble"
      >
        Vänd dig till din mottagning om du har frågor eller behöver en kopia av ditt intyg.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://e-tjanster.1177.se/mvk/"
            >
              Till startsidan
            </a>
          </ids-link>
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://www.1177.se/om-1177/nar-du-loggar-in-pa-1177.se/det-har-kan-du-gora-nar-du-loggat-in/hantera-intyg/hantera-dina-lakarintyg-och-lakarutlatanden/"
            >
              Om 1177 intyg
            </a>
            <ids-icon-external
              class="ids-icon"
              slot="append-icon"
            />
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render unknown type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <ids-icon-attention
      class="mx-auto ids-icon"
    />
    <div>
      <h1
        class="ids-heading-1 text-center"
      >
        Någonting gick fel
      </h1>
      <p
        class="ids-preamble"
      >
        På grund av ett tekniskt fel går det inte att visa Intyg just nu. Försök igen senare.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <ids-link>
            <ids-icon-chevron
              class="ids-icon"
            />
            <a
              href="https://e-tjanster.1177.se/mvk/"
            >
              Till startsidan
            </a>
          </ids-link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
